5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1785_3136.log
== TEST (2019-05-30 10:28:26) 
-- CODE:
from numpy import

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = media + log(a[i]+1)/size(a)
print(round(media))



-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:36) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = media + log(a[i]+1)/size(a)
print(round(media))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:53) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = exp(media + log(a[i]+1)/size(a))
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:10) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = exp(media + log(a[i]+1)/size(a))
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:15) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = exp(media + log(a[i]+1))
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:12) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = log( media + exp(a[i]+1))

	
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:17) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = media + exp(log(a[i]+1))

	
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:41) 
-- CODE:
from numpy import*

a = array(eval(input("digite: "))) #sum/size
media = 0
i = 0 
while(i<size(a)):
	media = media + log(exp(a[i]+1))

	
print(round(media,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
